syntax = "proto3";
package protos;

// StringValue와 같이 잘 알려진 타입을 활용한다.
option go_package = "kaonmir.xyz/productinfo";

import "google/protobuf/wrappers.proto";

service OrderManagement {
  rpc GetOrder(google.protobuf.StringValue) returns (Order) {}
  // Retreive all orders which are includeing the given item.
  rpc SearchOrders(google.protobuf.StringValue) returns (stream Order) {}

  rpc AddOrder(Order) returns (google.protobuf.StringValue) {}

  rpc updateOrders(stream Order) returns (google.protobuf.StringValue) {}

  rpc processOrders(stream Order) returns (stream CombinedShipment) {}
}


message Order {
  string id = 1;
  repeated string items = 2; // repeated string는 배열이다.
  string description = 3;
  float price = 4;
  string destination = 5;
}

message CombinedShipment {
  string id = 1;
  string status = 2;
  string destination = 3;
  repeated Order ordersList = 4;
}